# coachlm-tauri

./: .gitignore  .~lock.AGENTS.md#  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/plans/: s98-s103-detailed-stats.md
e2e/: chat.spec.ts  context.spec.ts  dashboard.spec.ts  onboarding.spec.ts  settings.spec.ts  tauri-mock.ts  training-plan.spec.ts
scripts/: release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/context/: mod.rs
src-tauri/src/fit/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/plan/: mod.rs
src-tauri/src/research/: cache.rs  fetch.rs  mod.rs  notebook.rs  orchestrator.rs  planner.rs  rate_limit.rs  types.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/strava/: mod.rs
src-tauri/src/web_search/: classifier.rs  mod.rs
src/components/: Chat.tsx  CloudProviderGuide.tsx  Context.tsx  Dashboard.tsx  Download.tsx  ErrorBoundary.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  OllamaSetupGuide.tsx  Onboarding.tsx  Privacy.tsx  Settings.tsx  ShoeCalculator.tsx  TrainingPlan.tsx
src/data/: shoes.ts
src/hooks/: useReleaseAssets.ts  useToast.tsx
src/styles/: global.css  markdown.css
src/test/: ActivityList.test.tsx  (+12 more)
stories/: S01-strava-oauth.md  S03-activity-streams.md  S04-athlete-profile.md  S05-context-profile-block.md  S06-context-training-summary.md  S07-context-pinned-insights.md  S08-context-prompt-assembler.md  S100-native-notifications.md  S101-offline-request-queue.md  S102-sleep-recovery-tracking.md  S103-activity-pace-data.md  S104-ui-consistency-polish.md  S105-fix-heartrate-zones-oauth-scope.md  S11-llm-router-local.md  S12-chat-ui.md  S13-chat-history.md  S14-save-insight.md  S15-activity-dashboard.md  S16-settings.md  S17-fit-file-import.md  S18-github-release-pipeline.md  S19-readme.md  S20-context-import-export.md  S22-training-plan-generation.md  S23-settings-ui.md  S24-strava-oauth-ui.md  S25-onboarding-wizard.md  S26-model-selection.md  S27-ollama-model-browser.md  S28-desktop-layout.md  S29-context-tab.md  S30-strava-sync-progress.md  S31-context-at-hand.md  S32-chat-markdown-rendering.md  S33-enhanced-athlete-context.md  S35-strava-sync-overview.md  S36-coaching-prompt-framework.md  S37-fix-pin-scroll-jump.md  S38-custom-scrollbar-styling.md  S39-user-system-prompt.md  (+56 more)
(+24 files in other folders)
