[package]
name = "coachlm-tauri"
version = "0.1.0"
description = "CoachLM — Your personal AI running coach"
authors = ["CoachLM"]
edition = "2021"

[lib]
name = "coachlm_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
