[package]
name = "coachlm-tauri"
version = "1.0.0"
description = "CoachLM — Your personal AI running coach"
authors = ["CoachLM"]
edition = "2021"

[lib]
name = "coachlm_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
fitparser = "0.10"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
# Start from pedantic as baseline
pedantic = { level = "warn", priority = -1 }
# Deny the dangerous stuff
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
# Selective allows for things that are too noisy in a Tauri app
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
# Keep these as warnings
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
large_futures = "warn"

[dev-dependencies]
tempfile = "3"
